--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -13,3 +13,10 @@ body {
 	font-size: 14px;
 	font-family: Circular, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
+
+.container {
+	max-width: 1000px;
+	margin-top: 30px;
+	margin-bottom: 30px;
+	margin-inline: auto;
+}
