--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -11,7 +11,7 @@
 	background-color:#FFFFFF;
 	height: 70px;
 	width: 100%;
-	border: 1px #DDDDDD;
+	border: 1px solid #DDDDDD;
 	border-radius: 4px;
 	padding: 20px;
 }
