--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,7 +1,7 @@
 footer {
 	display: flex;
 	position: absolute;
-	bottom: 0;
+	bottom: -50px;
 	justify-content: center;
 	align-items: center;
 	background-color: white;
