--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -22,6 +22,7 @@
 	justify-content: center;
 }
 .singleArticle article{
+	position: relative;
 	width: 390px;
 	padding: 20px;
 	margin: 20px;
@@ -30,6 +31,7 @@
 	text-align: center;
 }
 .twoArticles article{
+	position: relative;
 	width: 390px;
   padding: 20px;
   margin: 20px;
@@ -44,4 +46,50 @@
 .singleArticle article h2{
 	font-size: 30px;
 	text-align: center;
+}
+.price_by_night {
+	color: #FF5A5F;
+	border: 4px solid #FF5A5F;
+	border-radius: 48%;
+	min-width: 60px;
+	height: 60px;
+	font-size: 30px;
+	text-align: right;
+	padding: 10px;
+	position: absolute;
+	right: 10px;
+	top: 5px;
+}
+.information {
+	height: 80px;
+	border-top: 1px solid #DDDDDD;
+	border-bottom: 1px solid #DDDDDD;
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	margin-block: inherit;
+}
+
+.information div {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 100px;
+}
+
+.information .icon {
+	margin-right: 5px;
+}
+
+.user {
+	margin-top: 20px;
+	text-align: left;
+}
+
+.user b {
+	font-weight: bold;
+}
+
+.description {
+	margin-top: 20px;
 }
